# cpu-throttle

./: CONFIG.md  Cargo.toml  Makefile  README.md  cpu-throttle@.service
misc/: bash-completion.sh  zsh-completion.sh
misc/profiles/: long-only.json  strict.json
src/: main.rs
