[package]
name = "cpu-throttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
mathru = "0.15.4"
text_io = "0.1.12"
posixmq = "1.0.0"
nix = "0.29.0"
num_cpus = "1.16.0"
is_superuser = "1.0.1"

