[package]
name = "cpu-throttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
posixmq = "1.0.0"
nix = { version = "0.29.0", features = ["user"] }
num_cpus = "1.16.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1"

